apps/home-assistant/old_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - beelink
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          volumeMounts:
          # PVC for dynamic runtime data
            - name: data
              mountPath: /config
          # ConfigMap for static configuration
            - name: configmap-file
              subPath: configuration.yaml
              mountPath: /config/configuration.yaml # Inside of container
          securityContext:
            privileged: true
          livenessProbe:
            httpGet:
              path: /
              port: 8123                     
            initialDelaySeconds: 30          
            periodSeconds: 10                
          readinessProbe:                    
            httpGet:
              path: /
              port: 8123                     
            initialDelaySeconds: 10          
            periodSeconds: 5                 
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: home-assistant-pvc
        - name: configmap-file
          configMap:
            name: home-assistant-configmap
