apps/home-assistant/old_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8123
  selector:
    app: home-assistant
