apps/home-assistant/old_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assitant
  namespace: home-assistant
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: home-assistant
      port:
        number: 80
  tls:
    - hosts:
        - home-assistant
